--- a/package.json
+++ b/package.json
@@ -32,5 +32,8 @@
   "dependencies": {
     "clean-webpack-plugin": "^3.0.0",
     "connect-history-api-fallback": "^1.6.0"
+  },
+  "engines": {
+    "node": "13.1.0"
   }
 }
