--- a/package.json
+++ b/package.json
@@ -31,9 +31,11 @@
   },
   "dependencies": {
     "clean-webpack-plugin": "^3.0.0",
-    "connect-history-api-fallback": "^1.6.0"
+    "connect-history-api-fallback": "^1.6.0",
+    "express": "^4.17.1"
   },
   "engines": {
-    "node": "13.1.0"
+    "node": "13.1.0",
+    "npm": "6.12.1"
   }
 }
