create a server for heroku-deployment

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,5 @@
+//setting for serverpoint
+//implementing for herokudepolyment
 {
-    "liveServer.settings.port": 5501
+  "liveServer.settings.port": 5501
 }
